denoise_pca can be ran with EM or NIPALS algorithms

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,5 +28,6 @@ importFrom(dplyr,summarise)
 importFrom(dtw,dtwDist)
 importFrom(factoextra,fviz_nbclust)
 importFrom(jackstraw,jackstraw_kmeans)
+importFrom(mixOmics,nipals)
 importFrom(reshape2,melt)
 importFrom(tibble,add_column)
