name change from denoise* to preprocess*

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,9 +5,10 @@ export(cluster)
 export(cluster.elbow)
 export(denoise_pca)
 export(denoise_spline)
-export(denoise_svd)
 export(dispersion)
 export(pca.elbow)
+export(preprocess_pca)
+export(preprocess_spline)
 export(select_rows)
 export(select_variables)
 export(svd.vis)
